<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reset_pass"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@color/white"
    >

    <ImageButton
        android:id="@+id/ibrp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:textColor="@color/black"
        android:src="@drawable/left_arrow"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/rp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repa"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="16pt"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="6pt"
        />
    <TextView
        android:id="@+id/rp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recopa"
        android:textSize="8pt"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_light"
        />

    <TextView
        android:id="@+id/rp3"
        android:labelFor="@id/edrp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reco"
        android:textSize="10pt"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        />
    <EditText
        android:id="@+id/edrp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyonum"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/rp5"
        android:labelFor="@id/edrp6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nepa"
        android:textSize="10pt"
        android:layout_marginBottom="5pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        />
    <EditText
        android:id="@+id/edrp6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyopass"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/rp7"
        android:labelFor="@id/edrp8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copa"
        android:textSize="10pt"
        android:layout_marginBottom="5pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        />
    <EditText
        android:id="@+id/edrp8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyocopass"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/rpbutton8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_red"
        android:text="@string/changep"
        android:textAllCaps="false"
        android:textSize="8pt"
        android:layout_marginTop="15pt"
        android:fontFamily="@font/montserrat_light"/>
</LinearLayout>