<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@color/white"
    >

    <ImageButton
        android:id="@+id/ibsi"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:textColor="@color/black"
        android:src="@drawable/left_arrow"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/si1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wb"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="16pt"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="6pt"
        />
    <TextView
        android:id="@+id/si2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sitocon"
        android:textSize="8pt"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_light"
        />

    <TextView
        android:id="@+id/si3"
        android:labelFor="@id/ed4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suname"
        android:textSize="10pt"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        />
    <EditText
        android:id="@+id/ed4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyuname"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/si5"
        android:labelFor="@id/ed6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="10pt"
        android:layout_marginBottom="5pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        />
    <EditText
        android:id="@+id/ed6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enyopass"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/si7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fopa"
        android:textSize="10pt"
        android:gravity="right"
        android:layout_marginBottom="5pt"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        />

    <Button
        android:id="@+id/sibutton8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/button_red"
        android:drawablePadding="5dp"

        android:layout_marginTop="20pt"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="8pt"
        android:fontFamily="@font/montserrat_light"
        />
</LinearLayout>
